InternexDev_Sandbox/src/objects/Client_Account__c.object
<CustomObject>
    <fields>
        <fullName>Uncapped_Borrowing_Base__c</fullName>
        <formula>Sum_of_Net_Availability__c - Borrowing_Base_Reserve__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Gross Availability - Borrowing Base Reserve</inlineHelpText>
        <label>Uncapped Borrowing Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unused_Line_Rate__c</fullName>
        <label>Unused Line Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Watch_List__c</fullName>
        <formula>Client__r.Watch_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Watch List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X16_30__c</fullName>
        <label>16-30</label>
        <summarizedField>Debtor__c.X16_30__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1_15__c</fullName>
        <label>1-15</label>
        <summarizedField>Debtor__c.X1_15__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X31_60__c</fullName>
        <label>31-60</label>
        <summarizedField>Debtor__c.X31_60__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X90__c</fullName>
        <label>90+</label>
        <summarizedField>Debtor__c.X90__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Client Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Account__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Ineligibles_Amount_formula__c</columns>
        <columns>Eligible_For_Funding_formula__c</columns>
        <columns>Sum_of_Net_Availability__c</columns>
        <columns>Funding_Limit__c</columns>
        <columns>FIU_Outstanding__c</columns>
        <columns>Net_Availability__c</columns>
        <columns>Borrowing_Base__c</columns>
        <columns>Debtor_Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <columns>Application_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Client Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rate_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Rate_Type__c, &apos;Fixed&apos;) &amp;&amp;  ISNULL(Rate__c)</errorConditionFormula>
        <errorDisplayField>Rate__c</errorDisplayField>
        <errorMessage>Rate is mandatory if Rate type is &apos;Fixed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_AP_fields</fullName>
        <active>true</active>
        <errorConditionFormula>OR(NOT(ISBLANK(AP_1_15__c ))&amp;&amp; AP_1_15__c &lt; 0,NOT(ISBLANK(AP_16_30__c )) &amp;&amp; AP_16_30__c &lt; 0,NOT(ISBLANK(AP_31_60__c )) &amp;&amp; AP_31_60__c &lt; 0,NOT(ISBLANK(AP_61_90__c )) &amp;&amp; AP_61_90__c &lt; 0,NOT(ISBLANK(AP_90__c )) &amp;&amp; AP_90__c &lt; 0,NOT(ISBLANK(AP_Current__c)) &amp;&amp; AP_Current__c &lt; 0)</errorConditionFormula>
        <errorMessage>All Account Payable values should be &gt;=0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Picklist_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Method__c,&quot;&quot;) || ISPICKVAL(Index__c,&quot;&quot;) ||ISPICKVAL( Rate_Type__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Please check Method,Rate Type and Index.</errorMessage>
    </validationRules>
</CustomObject>